# ntust-114-2-security-hw3

./: .gitignore  README.md  config.yaml  pyproject.toml
checkpoints/: blur_k15.pth  blur_k45.pth  blur_k99.pth  dp_blur_eps0_1.pth  dp_blur_eps0_3.pth  dp_blur_eps0_5.pth  dp_blur_eps0_7.pth  dp_blur_eps1_0.pth  dp_blur_eps3_0.pth  dp_blur_eps5_0.pth  dp_blur_split_k45_eps0_1.pth  dp_blur_split_k45_eps0_3.pth  dp_blur_split_k45_eps0_5.pth  dp_blur_split_k45_eps0_7.pth  dp_blur_split_k45_eps1_0.pth  dp_blur_split_k45_eps3_0.pth  dp_blur_split_k45_eps5_0.pth  dp_pix_b16_eps0_1.pth  dp_pix_b16_eps0_3.pth  dp_pix_b16_eps0_5.pth  dp_pix_b16_eps0_7.pth  dp_pix_b16_eps1_0.pth  dp_pix_b16_eps3_0.pth  dp_pix_b16_eps5_0.pth  dp_pix_b2_eps0_1.pth  dp_pix_b2_eps0_3.pth  dp_pix_b2_eps0_5.pth  dp_pix_b2_eps0_7.pth  dp_pix_b2_eps1_0.pth  dp_pix_b2_eps3_0.pth  dp_pix_b2_eps5_0.pth  dp_pix_b4_eps0_1.pth  dp_pix_b4_eps0_3.pth  dp_pix_b4_eps0_5.pth  dp_pix_b4_eps0_7.pth  dp_pix_b4_eps1_0.pth  dp_pix_b4_eps3_0.pth  dp_pix_b4_eps5_0.pth  dp_pix_b8_eps0_1.pth  dp_pix_b8_eps0_3.pth  (+17 more)
data/: README.md
docs/: RESUME.md  attack-analysis.md  attack-results.md  division-of-labor.md  dp-attack-results.md
logs/: blur_k15.csv  blur_k45.csv  blur_k99.csv  dp_blur_split_k45_eps0_1.csv  dp_blur_split_k45_eps0_3.csv  dp_blur_split_k45_eps0_5.csv  dp_blur_split_k45_eps0_7.csv  dp_blur_split_k45_eps1_0.csv  dp_blur_split_k45_eps3_0.csv  dp_blur_split_k45_eps5_0.csv  dp_pix_b16_eps0_1.csv  dp_pix_b16_eps0_3.csv  dp_pix_b16_eps0_5.csv  dp_pix_b16_eps0_7.csv  dp_pix_b16_eps1_0.csv  dp_pix_b16_eps3_0.csv  (+34 more)
(+41 files in other folders)
