[project]
name = "face-deid-hw3"
version = "0.1.0"
description = "人臉去識別化方法與 AI 重識別攻擊之研究（HW3）— Pixelization / Gaussian Blurring、CNN 重識別攻擊、差分隱私"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "opencv-python>=4.10",
    "numpy>=1.26",
    "matplotlib>=3.8",
    "scikit-image>=0.25.2",
]

[project.optional-dependencies]
# dlib HOG+SVM 人臉偵測（比 Haar 精準，但編譯需要 cmake）：uv sync --extra detect-hog
detect-hog = ["dlib>=19.24"]
# Step 2 — CNN 重識別攻擊的訓練/評估（成員 3、4）：uv sync --extra attack
attack = ["torch>=2.2", "torchvision>=0.17"]

[dependency-groups]
# 開發/品質工具：uv sync --group dev
dev = ["ruff>=0.6", "pytest>=8.0", "pytest-cov>=5.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/facedeid"]

[tool.uv]
package = true

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
# E702: 視覺化腳本裡 `ax.set_xticks([]); ax.set_yticks([])` 這種一行兩句是刻意的緊湊寫法
ignore = ["E702"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
